# CPlusPlus

./: README.md
1/: CBrokenLine.cpp  CBrokenLine.h  CLock_brokenLine.h  CMakeLists.txt  CPoint.cpp  CPoint.h  CPolygon.cpp  CPolygon.h  CRegular_Polygon.cpp  CRegular_Polygon.h  CTrapezoid.cpp  CTrapezoid.h  CTriangle.h  main.cpp
2/: CMakeLists.txt  main.cpp
3/: main.cpp
4/: CMakeLists.txt  main.cpp
4 new/: main.cpp
5/: main.cpp
RubikCopy/: Rubik.sln
RubikCopy/ConsoleApplication4/: Blue.cpp  Colors.cpp  Colors.h  Cube.cpp  Cube.h  Red.cpp  main.cpp
RubikCopy/ConsoleApplication4/Debug/: vc142.idb
RubikCopy/ConsoleApplication4/Debug/ConsoleA.a189cdba.tlog/: CL.write.1.tlog  ConsoleApplication4.lastbuildstate  link.command.1.tlog  link.read.1.tlog
RubikLab6/: CMakeLists.txt
RubikLab6/ConsoleApplication4/: Blue.cpp  Colors.cpp  Colors.h  Cube.cpp  Cube.h  Green.cpp  Orange.cpp  main.cpp
RubikLab6/ConsoleApplication4/Debug/: ConsoleApplication4.exe.recipe
RubikLab6/ConsoleApplication4/Debug/ConsoleA.a189cdba.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.write.1.tlog
RubikLab6/Debug/: ConsoleApplication4.ilk
